--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,8 +20,9 @@
         android:backgroundTint="@color/colorAccent"
         android:text="@string/check"
         android:textAlignment="center"
-        android:textColor="@color/orangeText"
+        android:textColor="@color/orange"
         android:textSize="30sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +36,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:gravity="center"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,21 +46,25 @@
 
         <TextView
             android:id="@+id/resultIcon"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccent"
             android:textSize="150sp" />
 
         <TextView
             android:id="@+id/resultComment"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="30sp" />
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center">
 
@@ -71,6 +77,7 @@
                     android:id="@+id/accText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
                     android:gravity="end"
                     android:text="@string/acc"
                     android:textAlignment="textEnd"
@@ -81,8 +88,10 @@
                     android:id="@+id/accResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
                     android:gravity="start"
                     android:textAlignment="textStart"
+                    android:textColor="@color/colorAccent"
                     android:textSize="24sp" />
             </TableRow>
 
@@ -95,6 +104,7 @@
                     android:id="@+id/gyroText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
                     android:gravity="end"
                     android:text="@string/gyro"
                     android:textAlignment="textEnd"
@@ -105,8 +115,10 @@
                     android:id="@+id/gyroResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
                     android:gravity="start"
                     android:textAlignment="textStart"
+                    android:textColor="@color/colorAccent"
                     android:textSize="24sp" />
             </TableRow>
 
@@ -119,6 +131,7 @@
                     android:id="@+id/compassText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
                     android:gravity="end"
                     android:text="@string/compass"
                     android:textAlignment="textEnd"
@@ -129,8 +142,10 @@
                     android:id="@+id/compassResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
                     android:gravity="start"
                     android:textAlignment="textStart"
+                    android:textColor="@color/colorAccent"
                     android:textSize="24sp" />
             </TableRow>
 
@@ -143,6 +158,7 @@
                     android:id="@+id/screenSizeText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
                     android:gravity="end"
                     android:text="@string/screen_size"
                     android:textAlignment="textEnd"
@@ -153,8 +169,10 @@
                     android:id="@+id/screenSizeResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
                     android:gravity="start"
                     android:textAlignment="textStart"
+                    android:textColor="@color/colorAccent"
                     android:textSize="24sp" />
             </TableRow>
 
@@ -167,6 +185,7 @@
                     android:id="@+id/screenResText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
                     android:gravity="end"
                     android:text="@string/screen_res"
                     android:textAlignment="textEnd"
@@ -177,8 +196,10 @@
                     android:id="@+id/screenResResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
                     android:gravity="start"
                     android:textAlignment="textStart"
+                    android:textColor="@color/colorAccent"
                     android:textSize="24sp" />
             </TableRow>
 
@@ -191,6 +212,7 @@
                     android:id="@+id/androidText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
                     android:gravity="end"
                     android:text="@string/android_version"
                     android:textAlignment="textEnd"
@@ -201,8 +223,10 @@
                     android:id="@+id/androidResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
                     android:gravity="start"
                     android:textAlignment="textStart"
+                    android:textColor="@color/colorAccent"
                     android:textSize="24sp" />
             </TableRow>
 
@@ -215,6 +239,7 @@
                     android:id="@+id/ramText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="2dp"
                     android:gravity="end"
                     android:text="@string/ram"
                     android:textAlignment="textEnd"
@@ -225,8 +250,10 @@
                     android:id="@+id/ramResult"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
                     android:gravity="start"
                     android:textAlignment="textStart"
+                    android:textColor="@color/colorAccent"
                     android:textSize="24sp" />
             </TableRow>
         </TableLayout>
