--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff00ff</color>
-    <color name="colorPrimaryDark">#c700cb</color>
-    <color name="colorAccent">#ffeb3b</color>
-    <color name="orange">#ff9800</color>
+    <color name="colorPrimary">#2979ff</color>
+    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorAccent">#1565c0</color>
+    <color name="fontColor">#1565c0</color>
 </resources>
