--- a/app/src/main/res/layout/check_view_holder.xml
+++ b/app/src/main/res/layout/check_view_holder.xml
@@ -7,19 +7,23 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
-        android:id="@+id/result_name"
+        android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         tools:text="@tools:sample/first_names" />
 
-    <TextView
-        android:id="@+id/result_value"
+    <ImageView
+        android:id="@+id/value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="end"
-        tools:text="@tools:sample/cities" />
+        android:gravity="end" />
 
 </LinearLayout>
