--- a/app/src/main/res/layout/check_view_item.xml
+++ b/app/src/main/res/layout/check_view_item.xml
@@ -7,23 +7,20 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="3"
+        android:gravity="start"
+        android:textSize="24sp"
         tools:text="@tools:sample/first_names" />
 
     <ImageView
         android:id="@+id/value"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="end" />
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:gravity="end"
+        tools:srcCompat="@tools:sample/avatars" />
 
 </LinearLayout>
