--- a/app/src/main/res/layout/text_view_item.xml
+++ b/app/src/main/res/layout/text_view_item.xml
@@ -2,29 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal"
     android:padding="8dp">
-
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="3"
+        android:gravity="start"
+        android:textSize="24sp"
         tools:text="@tools:sample/first_names" />
 
     <TextView
         android:id="@+id/value"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="end"
+        android:textSize="24sp"
         tools:text="@tools:sample/cities" />
 
 </LinearLayout>
