--- a/app/src/main/res/layout/item_check_view.xml
+++ b/app/src/main/res/layout/item_check_view.xml
@@ -20,6 +20,7 @@
         android:id="@+id/value"
         android:layout_width="36dp"
         android:layout_height="36dp"
+        android:contentDescription="@string/the_result_of_the_item"
         android:gravity="end"
         tools:srcCompat="@drawable/check" />
 
